<resources>
    <string name="app_name">Keyboardly Dev</string>
    <string name="nav_sample">Sample</string>
    <string name="sample">Sample</string>
    <string name="data_not_found_nback">Data not found.\nBack</string>

    <string name="symbol_at">\@</string>
    <string name="symbol_and">&amp;</string>
    <string name="symbol_double_tick">\"</string>
    <string name="symbol_single_tick">\'</string>
    <string name="symbol_ask">\?</string>
    <string name="symbol_coma">,</string>
    <string name="symbol_dot">.</string>
    <string name="symbol_enter">↵</string>
    <string name="abc">ABC</string>

    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Keyboardly-Dev</string>
    <string name="nav_header_subtitle">dev@keyboardly.app</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_about">About</string>
    <string name="text_about">This project is used for developing add on for Keyboardly.</string>

    <string name="menu_home">Home</string>
    <string name="menu_addon">Add On</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="action_theme">Theme</string>
    <string name="dummy">"Dummy 1"</string>
    <string name="dummy2">"Dummy 2"</string>

</resources>